<resources>
    <string name="app_name">WeatherApp</string>
    <string name="City_edit" />
    <string name="City_hint">City(i.e. Charlotte)</string>
    <string name="State_edit" />
    <string name="State_hint">State (i.e. NC)</string>
    <string name="Btn_sbmt">Submit</string>
    <string name="Fav_lbl">Favorites</string>
    <string name="No_Fav">There is no city in your Favorites</string>
    <string name="Hourly_id">HOURLY DATA</string>
    <string name="location_label">Current Location:</string>
    <string name="Citystate_lbl" />
    <string name="tempid" />
    <string name="txtCon" />
    <string name="txtF" />
    <string name="txtCL">Current Location:</string>
    <string name="locn" />
    <string name="time" />
    <string name="txttem" />
    <string name="txtcon" />
    <string name="max">Max Temperature:</string>
    <string name="min">Min Temperature</string>
    <string name="min1">Min Temperature:</string>
    <string name="smax" />
    <string name="smin" />
    <string name="citylocn" />
    <string name="temp" />
    <string name="date" />
    <string name="t1">Feels Like:</string>
    <string name="t2">Humidity</string>
    <string name="t3">Dewpoint:</string>
    <string name="t4">Pressure:</string>
    <string name="t5">Clouds:</string>
    <string name="tl">Winds:</string>
    <string name="max1" />
    <string name="min11" />
    <string name="sfl" />
    <string name="shum" />
    <string name="sdp" />
    <string name="spressure" />
    <string name="showcloud" />
    <string name="txtdir" />
</resources>
