<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weatherapp.DetailsActivity"
    android:id="@+id/imgDiv">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCL"
        android:id="@+id/txtCL"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtCL"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locn"
        android:id="@+id/txtLocn"
        android:layout_alignTop="@+id/txtCL"
        android:layout_toRightOf="@+id/txtCL"
        android:layout_toEndOf="@+id/txtCL"
        android:layout_marginLeft="5dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/txttime"
        android:layout_alignTop="@+id/txtLocn"
        android:layout_toRightOf="@+id/txtLocn"
        android:layout_toEndOf="@+id/txtLocn"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/img1"
        android:layout_below="@+id/view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txttem"
        android:id="@+id/txttemp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/img1"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtcon"
        android:id="@+id/txtcon"
        android:layout_below="@+id/txttemp"
        android:layout_centerHorizontal="true"
        />
    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtMin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max"
        android:id="@+id/txtmax"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_below="@+id/txtcon"

         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min1"
        android:id="@+id/txtMin"
        android:layout_marginLeft="60dp"
        android:layout_below="@+id/txtmax"
        android:layout_alignRight="@+id/txtmax"
        android:layout_alignEnd="@+id/txtmax" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smax"
        android:id="@+id/showMin"

        android:layout_above="@+id/txtMin"
        android:layout_toRightOf="@+id/txtmax"
        android:layout_toEndOf="@+id/txtmax"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smin"
        android:id="@+id/showmin"

        android:layout_below="@+id/showMin"
        android:layout_toRightOf="@+id/txtMin"
        android:layout_toEndOf="@+id/txtMin"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:id="@+id/txt1"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="90dp"
        android:layout_below="@+id/txtMin"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:id="@+id/txt2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="90dp"
        android:layout_below="@+id/txt1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        android:id="@+id/txt3"
        android:layout_below="@+id/txt2"
        android:layout_marginLeft="90dp"

        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t4"
        android:id="@+id/txt4"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txt3"
        android:layout_alignLeft="@+id/txt5"
        android:layout_alignStart="@+id/txt5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t5"
        android:id="@+id/txt5"
        android:layout_below="@+id/txt4"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sfl"
        android:id="@+id/tshowfeel"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/txtMin"
        android:layout_alignStart="@+id/showMin"
        android:layout_alignLeft="@+id/showMin"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shum"
        android:id="@+id/txtshowHum"
        android:layout_alignTop="@+id/txt2"
        android:layout_alignLeft="@+id/tshowfeel"
        android:layout_alignStart="@+id/tshowfeel"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdp"
        android:id="@+id/txtshowdp"
        android:layout_above="@+id/txt4"
        android:layout_alignLeft="@+id/txtshowHum"
        android:layout_alignStart="@+id/txtshowHum"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spressure"
        android:id="@+id/txtSpressure"
        android:layout_above="@+id/txt5"
        android:layout_alignLeft="@+id/txtshowdp"
        android:layout_alignStart="@+id/txtshowdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showcloud"
        android:id="@+id/txtshowcloud"
        android:layout_above="@+id/txtlast"
        android:layout_alignLeft="@+id/txtSpressure"
        android:layout_alignStart="@+id/txtSpressure"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max1"
        android:id="@+id/smax"
        android:layout_alignBottom="@+id/showMin"
        android:layout_alignLeft="@+id/tshowfeel"
        android:layout_alignStart="@+id/tshowfeel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min11"
        android:id="@+id/smin"
        android:layout_alignTop="@+id/showmin"
        android:layout_alignLeft="@+id/smax"
        android:layout_alignStart="@+id/smax" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl"
        android:id="@+id/txtlast"
        android:layout_below="@+id/txt5"
        android:layout_marginLeft="90dp"

        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtdir"
        android:id="@+id/txtshowWind"
        android:layout_below="@+id/txtshowcloud"
        android:layout_alignLeft="@+id/txtSpressure"
        android:layout_alignStart="@+id/txtSpressure"
        android:layout_marginTop="10dp"

        android:textStyle="bold" />

</RelativeLayout>
