<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp"

    android:weightSum="1">


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCon"
        android:layout_below="@id/txttemp"
        android:id="@+id/txtCond"
        android:paddingLeft="20dp"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_alignBottom="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempid"
        android:id="@+id/txttemp"

        android:paddingLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtF"
        android:id="@+id/txtFah"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>