<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weatherapp.CityWeather">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Hourly_id"
        android:id="@+id/Hourly_lbl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <View android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/holo_blue_bright"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/Hourly_lbl"
        android:id="@+id/view2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_label"
        android:id="@+id/loc_label"
        android:layout_below="@+id/view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Citystate_lbl"
        android:id="@+id/city_lbl"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/loc_label"
        android:layout_alignLeft="@id/loc_label"
        android:layout_below="@id/view2"
        android:layout_marginLeft="139dp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loc_label"
        android:layout_marginTop="5dp"/>

</RelativeLayout>
